@@ -532,22 +532,20 @@
     "no-args": "Você não está em nenhum trisal! Mencione pessoas para juntar-se em um poliamor >.<",
     "banned-user": "Este trisal não pode acontecer pois possui usuários banidos da Menhera!",
     "marry-not-found": "um usuário de seu trisal não foi encontrado",
-    "no-owner": "utilize o comando mamar para que eu crie uma conta pra você antes de tudo >.<",
     "self-mention": "Tu não pode fazer um casal consigo memso",
-    "same-mention": "Tu n pode mencionar o mesmo usuário 2 vezes",
+    "same-mention": "Tu não pode mencionar o mesmo usuário 2 vezes tchê",
     "bot-mention": "Tu não pode formar um trisal com um bot. Na verdade isso é até esquisito... Sinto pena de ti por ter tentado ficar com um bot.",
     "no-db": "Um dos integrantes do trisal não foi encontrado no banco de dados! O melhor agora é desfazer este trisal e começar um outro",
     "comedor-de-casadas_uncensored": "UOUOUOU calma lá comedor de casadas, um dos usuários que você mencionou ja está em um trisal",
     "comedor-de-casadas": "UOUOUOU calma lá colega, um dos usuários que você mencionou ja está em um trisal",
-    "accept-message": ":heart: | Vocês aceitam formar um trisal? Os três devem clicar no botão em até 15 segundos",
+    "accept-message": ":heart: | Vocês aceitam formar um trisal? Os três devem clicar no botão em até 15 segundos\n{{author}}, {{first}} e {{second}}",
     "done": "Parabéns, vocês três formaram um trisal lindo! Utilize este comando novamente para ver suas fotinhas juntas",
-    "error": "Os 3 não reagiram à mensagem a tempo! Tente novamente, talvez com alguem que queira, quem sabe"
-  },
-  "untrisal": {
-    "error": "Tu não está em nenhum trisal!",
-    "sure": "Tu tem certeza que quer terminar o trisal? Tens 15 segundos para confirmar",
-    "confirm": "Terminar",
-    "done": "O seu trisal acabou! Não tem mais jeito. Acabou...."
+    "error": "Os 3 não reagiram à mensagem a tempo! Tente novamente, talvez com alguem que queira, quem sabe",
+    "untrisal": {
+      "breakup": "Terminar",
+      "sure": "Tu tem certeza que quer terminar o trisal? Tens 15 segundos para confirmar",
+      "done": "O seu trisal acabou! Não tem mais jeito. Acabou...."
+    }
   },
   "blackjack": {
     "available-options": "Opções Disponíveis",
